2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* checksums.c (GC_check_blocks, GC_check_dirty): Do log printing
	only if GC_print_stats; print errors using GC_err_printf.
	* checksums.c (GC_check_blocks): Join adjacent printf() calls into
	a single one.

2011-05-17  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_support.c (pthread_join): Add assertion (check thread is
	finished).
	* pthread_support.c (GC_register_my_thread): Don't detach the
	thread if invoked from the thread destructor.
	* win32_threads.c (GC_register_my_thread): Ditto.
	* win32_threads.c (GC_unregister_my_thread): Don't delete the
	thread (just set FINISHED) if the thread is not detached (only if
	GC_PTHREADS); add assertion (check the thread is not finished).
	* tests/threadkey_test.c (main): Join some created threads.

2011-05-17  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_support.c (GC_delete_gc_thread): Rename "gc_id" local
	variable to "t".
	* win32_threads.c (GC_delete_gc_thread): Ditto.
	* pthread_support.c (pthread_join, pthread_detach,
	pthread_cancel): Rename "thread_gc_id" local variable to "t".
	* win32_threads.c (GC_pthread_detach): Ditto.
	* win32_threads.c (GC_delete_gc_thread): Remove "gc_nvid" local
	variable.
	* win32_threads.c (GC_pthread_join): Rename "joinee" local
	variable to "t".

2011-05-16  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_stop_world.c (pthread_sigmask): Undefine even if not
	DEBUG_THREADS.
	* pthread_stop_world.c (GC_unblock_gc_signals): New function (only
	if GC_EXPLICIT_SIGNALS_UNBLOCK).
	* pthread_support.c (GC_unblock_gc_signals): New prototype.
	* pthread_support.c (GC_register_my_thread_inner,
	GC_register_my_thread): Call GC_unblock_gc_signals (only if
	GC_EXPLICIT_SIGNALS_UNBLOCK); add comment.
	* include/private/gcconfig.h (GC_EXPLICIT_SIGNALS_UNBLOCK): New
	macro.

2011-05-16  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_stop_world.c (GC_suspend_handler_inner): Remove "dummy",
	"sig" local variables; rename my_thread local variable to "self".
